src/treecalc/vm/asm/TciParser.java
// $ANTLR 3.4 Tci.g 2012-05-02 17:46:58
package treecalc.vm.asm; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class TciParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "COMMENTLINE", "COMMENTML", "EscapeSequence", "ID", "LABEL", "NUMBER_DEC", "NUMBER_INT", "STRING", "WHITESPACE", "'.calc'", "'.calcdef'", "'.calcs'", "'.calctotal'", "'.edge'", "'.edges'", "'.formula'", "'.formuladone'", "'.formulas'", "'.func'", "'.funcs'", "'.input'", "'.inputautocounter'", "'.inputcalc'", "'.inputcalcid'", "'.inputcalcids'", "'.inputs'", "'.link'", "'.node'", "'.nodecalc'", "'.nodeformulas'", "'.nodes'", "'.table'", "'.tablecol'", "'.tablerow'", "'.tables'", "'.tablevalue'", "':'", "'='", "'args'", "'autocounters'", "'calc'", "'calc_rangeend'", "'calc_rangestart'", "'choiceable'", "'col'", "'cols'", "'computenode'", "'computestartnode'", "'counter'", "'directaccess'", "'directaccessoffset'", "'false'", "'formula'", "'from'", "'func'", "'icalc'", "'id'", "'inclusion'", "'ind'", "'input'", "'name'", "'nargs'", "'node'", "'numeric'", "'numericsuper'", "'numericunique'", "'oo'", "'row'", "'rows'", "'shuffled'", "'simple'", "'size'", "'table'", "'timesformula'", "'timesid'", "'to'", "'true'", "'value'"
    };

    public static final int EOF=-1;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int COMMENT=4;
    public static final int COMMENTLINE=5;
    public static final int COMMENTML=6;
    public static final int EscapeSequence=7;
    public static final int ID=8;
    public static final int LABEL=9;
    public static final int NUMBER_DEC=10;
    public static final int NUMBER_INT=11;
    public static final int STRING=12;
    public static final int WHITESPACE=13;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public TciParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public TciParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return TciParser.tokenNames; }
    public String getGrammarFileName() { return "Tci.g"; }


        private TciAssembler asm;
        public TciParser(TokenStream input, TciAssembler asm) {
            this(input);
            this.asm = asm;
        }



    // $ANTLR start "tci"
    // Tci.g:15:1: tci : ( onedef )+ ;
    public final void tci() throws RecognitionException {
        try {
            // Tci.g:15:4: ( ( onedef )+ )
            // Tci.g:15:6: ( onedef )+
            {
            // Tci.g:15:6: ( onedef )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= 14 && LA1_0 <= 20)||(LA1_0 >= 22 && LA1_0 <= 40)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Tci.g:15:6: onedef
            	    {
            	    pushFollow(FOLLOW_onedef_in_tci46);
            	    onedef();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


             asm.done(); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "tci"



    // $ANTLR start "onedef"
    // Tci.g:18:1: onedef : ( defcalcsize | defcalc | defnodesize | defnode | defnodeformulas | defnodecalc | defcalcdef | defcalctotal | defedgesize | defedge | deftablesize | deftable | deftablecol | deftablevalue | deftablerow | deffuncsize | deffunc | definputcalcidsize | definputcalcid | definputsize | definput | definputautocounter | definputcalc | defformulasize | defformula );
    public final void onedef() throws RecognitionException {
        try {
            // Tci.g:18:7: ( defcalcsize | defcalc | defnodesize | defnode | defnodeformulas | defnodecalc | defcalcdef | defcalctotal | defedgesize | defedge | deftablesize | deftable | deftablecol | deftablevalue | deftablerow | deffuncsize | deffunc | definputcalcidsize | definputcalcid | definputsize | definput | definputautocounter | definputcalc | defformulasize | defformula )
            int alt2=25;
            switch ( input.LA(1) ) {
            case 16:
                {
                alt2=1;
                }
                break;
            case 14:
                {
                alt2=2;
                }
                break;
            case 35:
                {
                alt2=3;
                }
                break;
            case 32:
                {
                alt2=4;
                }
                break;
            case 34:
                {
                alt2=5;
                }
                break;
            case 33:
                {
                alt2=6;
                }
                break;
            case 15:
                {
                alt2=7;
                }
                break;
            case 17:
                {
                alt2=8;
                }
                break;
            case 19:
                {
                alt2=9;
                }
                break;
            case 18:
            case 31:
                {
                alt2=10;
                }
                break;
            case 39:
                {
                alt2=11;
                }
                break;
            case 36:
                {
                alt2=12;
                }
                break;
            case 37:
                {
                alt2=13;
                }
                break;
            case 40:
                {
                alt2=14;
                }
                break;
            case 38:
                {
                alt2=15;
                }
                break;
            case 24:
                {
                alt2=16;
                }
                break;
            case 23:
                {
                alt2=17;
                }
                break;
            case 29:
                {
                alt2=18;
                }
                break;
            case 28:
                {
                alt2=19;
                }
                break;
            case 30:
                {
                alt2=20;
                }
                break;
            case 25:
                {
                alt2=21;
                }
                break;
            case 26:
                {
                alt2=22;
                }
                break;
            case 27:
                {
                alt2=23;
                }
                break;
            case 22:
                {
                alt2=24;
                }
                break;
            case 20:
                {
                alt2=25;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // Tci.g:19:5: defcalcsize
                    {
                    pushFollow(FOLLOW_defcalcsize_in_onedef97);
                    defcalcsize();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // Tci.g:19:19: defcalc
                    {
                    pushFollow(FOLLOW_defcalc_in_onedef101);
                    defcalc();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // Tci.g:20:5: defnodesize
                    {
                    pushFollow(FOLLOW_defnodesize_in_onedef108);
                    defnodesize();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // Tci.g:20:19: defnode
                    {
                    pushFollow(FOLLOW_defnode_in_onedef112);
                    defnode();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // Tci.g:21:5: defnodeformulas
                    {
                    pushFollow(FOLLOW_defnodeformulas_in_onedef119);
                    defnodeformulas();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // Tci.g:22:5: defnodecalc
                    {
                    pushFollow(FOLLOW_defnodecalc_in_onedef126);
                    defnodecalc();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    // Tci.g:22:19: defcalcdef
                    {
                    pushFollow(FOLLOW_defcalcdef_in_onedef130);
                    defcalcdef();

                    state._fsp--;


                    }
                    break;
                case 8 :
                    // Tci.g:23:5: defcalctotal
                    {
                    pushFollow(FOLLOW_defcalctotal_in_onedef137);
                    defcalctotal();

                    state._fsp--;


                    }
                    break;
                case 9 :
                    // Tci.g:24:5: defedgesize
                    {
                    pushFollow(FOLLOW_defedgesize_in_onedef144);
                    defedgesize();

                    state._fsp--;


                    }
                    break;
                case 10 :
                    // Tci.g:24:19: defedge
                    {
                    pushFollow(FOLLOW_defedge_in_onedef148);
                    defedge();

                    state._fsp--;


                    }
                    break;
                case 11 :
                    // Tci.g:25:5: deftablesize
                    {
                    pushFollow(FOLLOW_deftablesize_in_onedef155);
                    deftablesize();

                    state._fsp--;


                    }
                    break;
                case 12 :
                    // Tci.g:25:20: deftable
                    {
                    pushFollow(FOLLOW_deftable_in_onedef159);
                    deftable();

                    state._fsp--;


                    }
                    break;
                case 13 :
                    // Tci.g:25:31: deftablecol
                    {
                    pushFollow(FOLLOW_deftablecol_in_onedef163);
                    deftablecol();

                    state._fsp--;


                    }
                    break;
                case 14 :
                    // Tci.g:25:45: deftablevalue
                    {
                    pushFollow(FOLLOW_deftablevalue_in_onedef167);
                    deftablevalue();

                    state._fsp--;


                    }
                    break;
                case 15 :
                    // Tci.g:25:61: deftablerow
                    {
                    pushFollow(FOLLOW_deftablerow_in_onedef171);
                    deftablerow();

                    state._fsp--;


                    }
                    break;
                case 16 :
                    // Tci.g:26:5: deffuncsize
                    {
                    pushFollow(FOLLOW_deffuncsize_in_onedef177);
                    deffuncsize();

                    state._fsp--;


                    }
                    break;
                case 17 :
                    // Tci.g:26:19: deffunc
                    {
                    pushFollow(FOLLOW_deffunc_in_onedef181);
                    deffunc();

                    state._fsp--;


                    }
                    break;
                case 18 :
                    // Tci.g:27:5: definputcalcidsize
                    {
                    pushFollow(FOLLOW_definputcalcidsize_in_onedef187);
                    definputcalcidsize();

                    state._fsp--;


                    }
                    break;
                case 19 :
                    // Tci.g:27:26: definputcalcid
                    {
                    pushFollow(FOLLOW_definputcalcid_in_onedef191);
                    definputcalcid();

                    state._fsp--;


                    }
                    break;
                case 20 :
                    // Tci.g:28:5: definputsize
                    {
                    pushFollow(FOLLOW_definputsize_in_onedef197);
                    definputsize();

                    state._fsp--;


                    }
                    break;
                case 21 :
                    // Tci.g:28:20: definput
                    {
                    pushFollow(FOLLOW_definput_in_onedef201);
                    definput();

                    state._fsp--;


                    }
                    break;
                case 22 :
                    // Tci.g:28:31: definputautocounter
                    {
                    pushFollow(FOLLOW_definputautocounter_in_onedef205);
                    definputautocounter();

                    state._fsp--;


                    }
                    break;
                case 23 :
                    // Tci.g:28:53: definputcalc
                    {
                    pushFollow(FOLLOW_definputcalc_in_onedef209);
                    definputcalc();

                    state._fsp--;


                    }
                    break;
                case 24 :
                    // Tci.g:29:5: defformulasize
                    {
                    pushFollow(FOLLOW_defformulasize_in_onedef215);
                    defformulasize();

                    state._fsp--;


                    }
                    break;
                case 25 :
                    // Tci.g:29:22: defformula
                    {
                    pushFollow(FOLLOW_defformula_in_onedef219);
                    defformula();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "onedef"



    // $ANTLR start "defcalcsize"
    // Tci.g:32:1: defcalcsize : '.calcs' 'size' '=' NUMBER_INT ;
    public final void defcalcsize() throws RecognitionException {
        Token NUMBER_INT1=null;

        try {
            // Tci.g:32:12: ( '.calcs' 'size' '=' NUMBER_INT )
            // Tci.g:33:5: '.calcs' 'size' '=' NUMBER_INT
            {
            match(input,16,FOLLOW_16_in_defcalcsize240); 

            match(input,76,FOLLOW_76_in_defcalcsize247); 

            match(input,42,FOLLOW_42_in_defcalcsize249); 

            NUMBER_INT1=(Token)match(input,NUMBER_INT,FOLLOW_NUMBER_INT_in_defcalcsize251); 

             asm.setCalcsize(NUMBER_INT1); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "defcalcsize"



    // $ANTLR start "defcalc"
    // Tci.g:37:1: defcalc : '.calc' 'calc' '=' calc= NUMBER_INT 'name' '=' name= ID 'nargs' '=' nargs= NUMBER_INT ( 'computenode' '=' node= NUMBER_INT | 'computestartnode' '=' node= NUMBER_INT ) ;
    public final void defcalc() throws RecognitionException {
        Token calc=null;
        Token name=null;
        Token nargs=null;
        Token node=null;

        try {
            // Tci.g:37:8: ( '.calc' 'calc' '=' calc= NUMBER_INT 'name' '=' name= ID 'nargs' '=' nargs= NUMBER_INT ( 'computenode' '=' node= NUMBER_INT | 'computestartnode' '=' node= NUMBER_INT ) )
            // Tci.g:38:5: '.calc' 'calc' '=' calc= NUMBER_INT 'name' '=' name= ID 'nargs' '=' nargs= NUMBER_INT ( 'computenode' '=' node= NUMBER_INT | 'computestartnode' '=' node= NUMBER_INT )
            {
            match(input,14,FOLLOW_14_in_defcalc301); 

            match(input,45,FOLLOW_45_in_defcalc308); 

            match(input,42,FOLLOW_42_in_defcalc310); 

            calc=(Token)match(input,NUMBER_INT,FOLLOW_NUMBER_INT_in_defcalc315); 

            match(input,65,FOLLOW_65_in_defcalc321); 

            match(input,42,FOLLOW_42_in_defcalc323); 

            name=(Token)match(input,ID,FOLLOW_ID_in_defcalc328); 

            match(input,66,FOLLOW_66_in_defcalc335); 

            match(input,42,FOLLOW_42_in_defcalc337); 

            nargs=(Token)match(input,NUMBER_INT,FOLLOW_NUMBER_INT_in_defcalc341); 

             asm.addCalc(calc, name, nargs); 

            // Tci.g:42:5: ( 'computenode' '=' node= NUMBER_INT | 'computestartnode' '=' node= NUMBER_INT )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==51) ) {
                alt3=1;
            }
            else if ( (LA3_0==52) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // Tci.g:42:9: 'computenode' '=' node= NUMBER_INT
                    {
                    match(input,51,FOLLOW_51_in_defcalc373); 

                    match(input,42,FOLLOW_42_in_defcalc380); 

                    node=(Token)match(input,NUMBER_INT,FOLLOW_NUMBER_INT_in_defcalc384); 

                     asm.setCalcMainSingle(calc, node); 

                    }
                    break;
                case 2 :
                    // Tci.g:43:9: 'computestartnode' '=' node= NUMBER_INT
                    {
                    match(input,52,FOLLOW_52_in_defcalc402); 

                    match(input,42,FOLLOW_42_in_defcalc404); 

                    node=(Token)match(input,NUMBER_INT,FOLLOW_NUMBER_INT_in_defcalc408); 

                     asm.setCalcMainSum   (calc, node); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "defcalc"



    // $ANTLR start "defnodesize"
    // Tci.g:47:1: defnodesize : '.nodes' 'size' '=' NUMBER_INT ;
    public final void defnodesize() throws RecognitionException {
        Token NUMBER_INT2=null;

        try {
            // Tci.g:47:12: ( '.nodes' 'size' '=' NUMBER_INT )
            // Tci.g:48:5: '.nodes' 'size' '=' NUMBER_INT
            {
            match(input,35,FOLLOW_35_in_defnodesize458); 

            match(input,76,FOLLOW_76_in_defnodesize464); 

            match(input,42,FOLLOW_42_in_defnodesize466); 

            NUMBER_INT2=(Token)match(input,NUMBER_INT,FOLLOW_NUMBER_INT_in_defnodesize468); 

             asm.setNodesize(NUMBER_INT2); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "defnodesize"



    // $ANTLR start "defnode"
    // Tci.g:52:1: defnode : '.node' 'node' '=' node= NUMBER_INT 'id' '=' id= ID ( 'name' '=' name= ( ID | STRING ) )? ;
    public final void defnode() throws RecognitionException {
        Token node=null;
        Token id=null;
        Token name=null;

        try {
            // Tci.g:52:8: ( '.node' 'node' '=' node= NUMBER_INT 'id' '=' id= ID ( 'name' '=' name= ( ID | STRING ) )? )
            // Tci.g:53:5: '.node' 'node' '=' node= NUMBER_INT 'id' '=' id= ID ( 'name' '=' name= ( ID | STRING ) )?
            {
            match(input,32,FOLLOW_32_in_defnode532); 

            match(input,67,FOLLOW_67_in_defnode539); 

            match(input,42,FOLLOW_42_in_defnode541); 

            node=(Token)match(input,NUMBER_INT,FOLLOW_NUMBER_INT_in_defnode545); 

            match(input,61,FOLLOW_61_in_defnode579); 

            match(input,42,FOLLOW_42_in_defnode581); 

            id=(Token)match(input,ID,FOLLOW_ID_in_defnode587); 

            // Tci.g:56:5: ( 'name' '=' name= ( ID | STRING ) )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==65) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // Tci.g:56:6: 'name' '=' name= ( ID | STRING )
                    {
                    match(input,65,FOLLOW_65_in_defnode632); 

                    match(input,42,FOLLOW_42_in_defnode634); 

                    name=(Token)input.LT(1);

                    if ( input.LA(1)==ID||input.LA(1)==STRING ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    }
                    break;

            }


             asm.addNode(node, id, name); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "defnode"



    // $ANTLR start "defnodeformulas"
    // Tci.g:59:1: defnodeformulas : '.nodeformulas' 'node' '=' node= NUMBER_INT ( 'inclusion' '=' inclusion= NUMBER_INT )? ( 'timesformula' '=' times= NUMBER_INT 'timesid' '=' timesid= NUMBER_INT )? ;
    public final void defnodeformulas() throws RecognitionException {
        Token node=null;
        Token inclusion=null;
        Token times=null;
        Token timesid=null;

        try {
            // Tci.g:59:16: ( '.nodeformulas' 'node' '=' node= NUMBER_INT ( 'inclusion' '=' inclusion= NUMBER_INT )? ( 'timesformula' '=' times= NUMBER_INT 'timesid' '=' timesid= NUMBER_INT )? )
            // Tci.g:62:5: '.nodeformulas' 'node' '=' node= NUMBER_INT ( 'inclusion' '=' inclusion= NUMBER_INT )? ( 'timesformula' '=' times= NUMBER_INT 'timesid' '=' timesid= NUMBER_INT )?
            {
            match(input,34,FOLLOW_34_in_defnodeformulas723); 

            match(input,67,FOLLOW_67_in_defnodeformulas729); 

            match(input,42,FOLLOW_42_in_defnodeformulas731); 

            node=(Token)match(input,NUMBER_INT,FOLLOW_NUMBER_INT_in_defnodeformulas735); 

            // Tci.g:64:5: ( 'inclusion' '=' inclusion= NUMBER_INT )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==62) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // Tci.g:64:6: 'inclusion' '=' inclusion= NUMBER_INT
                    {
                    match(input,62,FOLLOW_62_in_defnodeformulas742); 

